Fixed footer and hero banner on mobile

--- a/styles/home.css
+++ b/styles/home.css
@@ -5,7 +5,6 @@
     flex-direction: column;
 }
 
-
 .hero-banner {
     background-color: var(--dark-blue);
     display: flex;
@@ -15,6 +14,7 @@
     linear-gradient(to right, #335677 1.5px, transparent 2px),
     linear-gradient(to bottom, #335677 1.5px, transparent 1px);
     background-attachment: fixed;
+    background-position: 50%;
     margin-bottom: 40px;
 }
 
@@ -237,7 +237,6 @@ footer {
   flex-grow: 1;
   display: flex;
   justify-content: center;
-  padding-left: 20px;
   max-width: 1300px;
 }
 
@@ -312,14 +311,13 @@ footer {
   .icon {
     padding-left: 0;
   }
+
   .hero-banner-items {
     padding-top: 40px;
     padding-bottom: 40px;
     flex-direction: column;
     justify-content: center;
     min-height: 500px;
-    padding-left: 0px;
-    padding-right: 0px;
   }
   .gradient-logo {
     font-size: 50px;
@@ -352,18 +350,21 @@ footer {
   .tagline-sub {
     font-size: 20px
   }
+  .tagline-sub-1 {
+    margin-bottom: 32px;
+  }
 }
 
 @media screen and (max-width: 400px) {
   .gradient-logo {
-    font-size: 40px;
+    font-size: 12vw;
   }
   .subtitle {
     font-size: 20px;
   }
 }
 
-@media screen and (max-width: 370px) {
+@media screen and (max-width: 320) {
   .hero-image-wrapper {
     display: none;
   }
